docs: add documentation for update openings
