# handler/response.go
@@ -44,3 +44,8 @@ type ListOpeningsResponse struct {
 	Message string `json:"message"`
 	Data 	[]schemas.OpeningResponse `json:"data"`
 }
+
+type UpdateOpeningResponse struct {
+	Message string `json:"message"`
+	Data 	schemas.OpeningResponse `json:"data"`
+}
